--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -93,7 +93,8 @@ jobs:
         continue-on-error: true
         run: |
           ctest -VV
-      - run: cp build/Testing/Temporary/LastTest.log build/Testing/ClientTest.${{ env.LABEL }}.log
+      - name: Rename log file for upload
+        run: cp build/Testing/Temporary/LastTest.log build/Testing/ClientTest.${{ env.LABEL }}.log
       - uses: actions/upload-artifact@v2
         with:
           name: ClientTests
@@ -104,12 +105,6 @@ jobs:
         working-directory: build
         run: |
           ctest --rerun-failed -VV
-          cp build/Testing/Temporary/LastTest.log build/Testing/ClientTestR.${{ env.LABEL }}.log
-      - uses: actions/upload-artifact@v2
-        if: ${{ steps.client.outcome == 'failure' }}
-        with:
-          name: ClientTests
-          path: build/Testing/ClientTestR.${{ env.LABEL }}.log
 
       - name: Build libsrcml Tests
         shell: bash
