Try specifying the platform for an action based on a Docker image

--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -9,7 +9,10 @@ jobs:
       matrix:
         distribution: ["ubuntu:21.10", "fedora:35"]
     runs-on: ubuntu-latest
-    container: srcml/${{ matrix.distribution }}
+    container:
+      image: srcml/${{ matrix.distribution }}
+      options: --platform linux/arm64
+
     timeout-minutes: 10
     steps:
 
