--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -5,15 +5,11 @@ on: workflow_dispatch
 
 jobs:
   package:
-    strategy:
-      matrix:
-        distribution: ["ubuntu:21.10", "fedora:35"]
-        arch: ["linux/amd64", "linux/arm64"]
     runs-on: ubuntu-latest
     continue-on-error: true
-    container:
-      image: srcml/${{ matrix.distribution }}
-      options: --platform ${{ matrix.arch }}
+    container: 
+      image: ubuntu:21.10
+      options: --platform linux/arm64/v8
 
     timeout-minutes: 10
     steps:
@@ -25,128 +21,4 @@ jobs:
         shell: bash
         run: |
           cat /etc/os-release
-          export VALUE=$(echo ${{ matrix.distribution }} | tr ':' '-')
-          echo "LABEL=$VALUE" >> $GITHUB_ENV
-
-      - name: Create build directory
-        shell: bash
-        run: mkdir build
-
-      - name: CMake Setup
-        shell: bash
-        working-directory: build
-        run: |
-          cmake .. -G Ninja
-
-      - name: Build
-        shell: bash
-        working-directory: build
-        run: |
-          ninja
-
-      - name: Package RPM
-        if: ${{ !contains(matrix.distribution, 'ubuntu') }}
-        shell: bash
-        working-directory: build
-        run: |
-          cpack -G RPM
-
-      - name: Package DEB
-        if: ${{ contains(matrix.distribution, 'ubuntu') }}
-        shell: bash
-        working-directory: build
-        run: |
-          cpack -G DEB
-
-      - uses: actions/upload-artifact@v2
-        continue-on-error: true
-        with:
-          name: FedoraDist
-          path: |
-            build/dist/*.rpm
-            build/dist/*.deb
-
-      - name: Install Fedora with dnf
-        if: ${{ contains(matrix.distribution, 'fedora') }}
-        shell: bash
-        run: |
-          dnf install -y build/dist/srcml*.rpm
-
-      - name: Install CentOS with yum
-        if: ${{ contains(matrix.distribution, 'centos') }}
-        shell: bash
-        run: |
-          yum install -y build/dist/srcml*.rpm
-
-      - name: Install Ubuntu with apt
-        if: ${{ contains(matrix.distribution, 'ubuntu') }}
-        shell: bash
-        run: |
-          apt install -y ./build/dist/srcml*.deb
-
-      - name: Run Installed srcml
-        shell: bash
-        working-directory: build
-        run: |
-          srcml --version
-          srcml --text="int a;" -l C++
-
-      - name: Client Tests on Installed srcml
-        shell: bash
-        id: client
-        working-directory: build
-        continue-on-error: true
-        run: |
-          ctest -VV
-      - name: Rename log file for upload
-        run: cp build/Testing/Temporary/LastTest.log build/Testing/ClientTest.${{ env.LABEL }}.log
-      - uses: actions/upload-artifact@v2
-        with:
-          name: ClientTests
-          path: build/Testing/ClientTest.${{ env.LABEL }}.log
-
-      - name: Rerun any client test failures
-        if: ${{ steps.client.outcome == 'failure' }}
-        working-directory: build
-        continue-on-error: true
-        run: |
-          ctest --rerun-failed -VV
-
-      - name: Build libsrcml Tests
-        shell: bash
-        working-directory: build
-        continue-on-error: true
-        run: |
-          cmake .. -DBUILD_LIBSRCML_TESTS=ON
-          cmake --build . --config Release --target build_libsrcml_tests
-
-      - name: Run libsrcml Tests on Installed libsrcml
-        shell: bash
-        working-directory: build
-        continue-on-error: true
-        run: |
-          ctest -R ^test_
-      - run: cp build/Testing/Temporary/LastTest.log build/Testing/libsrcmlTest.${{ env.LABEL }}.log
-      - uses: actions/upload-artifact@v2
-        with:
-          name: libsrcmlTests
-          path: build/Testing/libsrcmlTest.${{ env.LABEL }}.log
-
-      - name: Generate Parser Tests
-        shell: bash
-        working-directory: build
-        run: |
-          cmake .. -DBUILD_PARSER_TESTS=ON
-          cmake --build . --config Release --target gen_parser_tests
-
-      - name: Run Parser Tests
-        shell: bash
-        working-directory: build
-        continue-on-error: true
-        run: |
-          srcml --dev --parser-test test/parser/testsuite | tee ParserTest.log
-      - run: cp build/ParserTest.log build/libsrcmlTest.${{ env.LABEL }}.log
-      - uses: actions/upload-artifact@v2
-        with:
-          name: ParserTests
-          path: build/libsrcmlTest.${{ env.LABEL }}.log
+          uname -m
