--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -14,6 +14,10 @@ jobs:
     timeout-minutes: 10
     steps:
 
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
