--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -14,15 +14,16 @@ jobs:
     timeout-minutes: 10
     steps:
 
+      - name: OS Version
+        shell: bash
+        run: |
+          cat /etc/os-release
+          uname -m
+          docker ps -a
+
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
 
       - name: Checkout Repository
         uses: actions/checkout@v2
-
-      - name: OS Version
-        shell: bash
-        run: |
-          cat /etc/os-release
-          uname -m
