--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -22,10 +22,11 @@ jobs:
         shell: bash
         run: |
           /usr/bin/docker pull ubuntu:21.10
-          /usr/bin/docker create --platform linux/arm64/v8 --name arm --entrypoint "tail" ubuntu:21.10 -f /dev/null
+          /usr/bin/docker create --platform linux/arm64/v8 --name arm --workdir /__w/srcML/srcML -e GITHUB_ACTIONS=true -e CI=true -v "/var/run/docker.sock":"/var/run/docker.sock" -v "/home/runner/work":"/__w" -v "/home/runner/runners/2.278.0/externals":"/__e":ro -v "/home/runner/work/_temp":"/__w/_temp" -v "/home/runner/work/_actions":"/__w/_actions" -v "/opt/hostedtoolcache":"/__t" -v "/home/runner/work/_temp/_github_home":"/github/home" -v "/home/runner/work/_temp/_github_workflow":"/github/workflow" --entrypoint "tail" ubuntu:21.10 -f /dev/null
           /usr/bin/docker start arm
           /usr/bin/docker ps --all 
           /usr/bin/docker inspect arm
 
       - shell: bash
         run: uname -m
+
