Experiment with arm64 on ubuntu

--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 
 jobs:
   package:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     continue-on-error: true
     # container: 
     #   image: ubuntu:21.10
@@ -21,8 +21,11 @@ jobs:
       - name: OS Version
         shell: bash
         run: |
+          /usr/bin/docker ps --all --quiet --no-trunc --filter "label=8a33c1"
+          /usr/bin/docker network prune --force --filter "label=8a33c1"
+          /usr/bin/docker network create --label 8a33c1 github_network_006bf04ab0b3427c818ae378ba6c9d6a
           /usr/bin/docker pull ubuntu:21.10
-          /usr/bin/docker create --platform linux/arm64/v8 --name arm --workdir /__w/srcML/srcML -e GITHUB_ACTIONS=true -e CI=true -v "/var/run/docker.sock":"/var/run/docker.sock" -v "/home/runner/work":"/__w" -v "/home/runner/runners/2.278.0/externals":"/__e":ro -v "/home/runner/work/_temp":"/__w/_temp" -v "/home/runner/work/_actions":"/__w/_actions" -v "/opt/hostedtoolcache":"/__t" -v "/home/runner/work/_temp/_github_home":"/github/home" -v "/home/runner/work/_temp/_github_workflow":"/github/workflow" --entrypoint "tail" ubuntu:21.10 -f /dev/null
+          /usr/bin/docker create --platform linux/arm64/v8 --label 8a33c1 --network github_network_006bf04ab0b3427c818ae378ba6c9d6a --name arm --workdir /__w/srcML/srcML -e GITHUB_ACTIONS=true -e CI=true -v "/var/run/docker.sock":"/var/run/docker.sock" -v "/home/runner/work":"/__w" -v "/home/runner/runners/2.278.0/externals":"/__e":ro -v "/home/runner/work/_temp":"/__w/_temp" -v "/home/runner/work/_actions":"/__w/_actions" -v "/opt/hostedtoolcache":"/__t" -v "/home/runner/work/_temp/_github_home":"/github/home" -v "/home/runner/work/_temp/_github_workflow":"/github/workflow" --entrypoint "tail" ubuntu:21.10 -f /dev/null
           /usr/bin/docker start arm
           /usr/bin/docker ps --all 
           /usr/bin/docker inspect arm
