Experiment with arm64 on ubuntu

--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           /usr/bin/docker ps --all --quiet --no-trunc --filter "label=8a33c1"
           /usr/bin/docker network prune --force --filter "label=8a33c1"
-          /usr/bin/docker network create --label 8a33c1 --name srcmlnet
+          /usr/bin/docker network create --label 8a33c1 srcmlnet
           /usr/bin/docker pull ubuntu:21.10
           /usr/bin/docker create --platform linux/arm64/v8 --name arm --label 8a33c1 --workdir /__w/srcML/srcML --network srcmlnet  -e "HOME=/github/home" -e GITHUB_ACTIONS=true -e CI=true -v "/var/run/docker.sock":"/var/run/docker.sock" -v "/home/runner/work":"/__w" -v "/home/runner/runners/2.278.0/externals":"/__e":ro -v "/home/runner/work/_temp":"/__w/_temp" -v "/home/runner/work/_actions":"/__w/_actions" -v "/opt/hostedtoolcache":"/__t" -v "/home/runner/work/_temp/_github_home":"/github/home" -v "/home/runner/work/_temp/_github_workflow":"/github/workflow" --entrypoint "tail" ubuntu:21.10 "-f" "/dev/null"
           /usr/bin/docker start arm
