--- a/.github/workflows/Experiment.yml
+++ b/.github/workflows/Experiment.yml
@@ -12,7 +12,7 @@ jobs:
     continue-on-error: true
     container:
       image: srcml/${{ matrix.distribution }}
-      options: --platform linux/arm64
+      options: --platform linux/amd64
 
     timeout-minutes: 10
     steps:
